ADDED: html document to create form using input elements

--- a/pages/sampleForm.html
+++ b/pages/sampleForm.html
@@ -36,7 +36,7 @@
 
         <div>
             <label for="tel" >Phone Number : </label>
-            <input type="tel" id="tel" name="tel">
+            <input type="tel" id="tel" name="tel" required/>
             <error-output class="phone-error" for="phone"></error-output>
         </div>
 
